Get highest GL version(excluding 4.6 since lwjgl2 troll)